--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,35 @@
 </header>
 
 <main>
-  <h2>My posts</h2>
+  <div class="main-header">
+    <h2>My posts</h2>
+
+    <button *ngIf="!isAddOpen" (click)="onToggle()">Add new post</button>
+    <button *ngIf="isAddOpen" (click)="onToggle()">Cancel</button>
+  </div>
+
+  <div class="post-form" *ngIf="isAddOpen">
+    <div>
+      <h4>Title</h4>
+      <input
+        type="text"
+        placeholder="Write title"
+        class="input-field"
+        [(ngModel)]="newPost.title"
+      />
+
+      <h4>Description</h4>
+      <input
+        type="text"
+        placeholder="Write text"
+        class="input-field"
+        [(ngModel)]="newPost.description"
+      />
+    </div>
+
+    <button (click)="onSave()">Save</button>
+  </div>
+
   <div *ngFor="let post of myPosts">
     <app-post [post]="post"></app-post>
   </div>
