--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
+<header class="home-header">
+  Mukhit Nassyrov
+
+  <img
+    width="100px"
+    height="50px"
+    src="https://variety.com/wp-content/uploads/2023/01/Twitter-Third-Party-Apps.png"
+  />
+</header>
+
+<nav class="app-nav">
+  <a routerLink="/home" class="nav-link">Home</a>
+  <a routerLink="/feed" class="nav-link">Feed</a>
+  <a routerLink="/about-us" class="nav-link">About Us</a>
+</nav>
+
 <router-outlet />
