--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,9 @@
 <div class="about-us">
   <h1>About Us</h1>
-  twitter is good
+  <div class="user-list">
+    <div *ngFor="let user of users" class="user-card">
+      <h2>{{ user.name }}</h2>
+      <p>Email: {{ user.email }}</p>
+    </div>
+  </div>
 </div>
